--- a/CustomerApp/app/src/main/AndroidManifest.xml
+++ b/CustomerApp/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".PresentationLayer.HomeScreen" />
-        <activity android:name=".PresentationLayer.add_saldo"></activity>
+        <activity android:name=".PresentationLayer.add_saldo" />
+        <activity android:name=".TestActivity"></activity>
     </application>
 
 </manifest>
