--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ CustomerApp/.idea/modules.xml
 EmployeeApp/.idea/modules.xml
 CustomerApp/.idea/vcs.xml
 EmployeeApp/.idea/vcs.xml
+CustomerApp/.idea/misc.xml
+EmployeeApp/.idea/misc.xml
