Changed add_saldo to AddSaldoActivity

--- a/CustomerApp/app/src/main/AndroidManifest.xml
+++ b/CustomerApp/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".PresentationLayer.HomeScreen" />
-        <activity android:name=".PresentationLayer.add_saldo" />
+        <activity android:name=".PresentationLayer.AddSaldoActivity" />
         <activity android:name=".TestActivity"></activity>
     </application>
 
