--- a/CustomerApp/app/src/main/AndroidManifest.xml
+++ b/CustomerApp/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
         <activity android:name=".PresentationLayer.HomeScreen" />
         <activity android:name=".PresentationLayer.AddSaldoActivity" />
         <activity android:name=".TestActivity" />
-        <activity android:name=".PresentationLayer.WalletActivity"></activity>
+        <activity android:name=".PresentationLayer.WalletActivity" />
+        <activity android:name=".PresentationLayer.MyAccountActivity" />
+        <activity android:name=".PresentationLayer.MyOrdersActivity" />
+        <activity android:name=".PresentationLayer.OrderActivity"></activity>
     </application>
 
 </manifest>
