Tim zijn user story proberen te fixen
Pittig veel dingen aangepast

--- a/CustomerApp/app/build.gradle
+++ b/CustomerApp/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.periode4groep2.customerapp"
         minSdkVersion 17
         targetSdkVersion 25
