--- a/CustomerApp/app/src/main/AndroidManifest.xml
+++ b/CustomerApp/app/src/main/AndroidManifest.xml
@@ -17,12 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".PresentationLayer.HomeScreenActivity" />
-        <activity android:name=".PresentationLayer.AddSaldoActivity" />
+        <activity android:name=".PresentationLayer.AddBalanceActivity" />
         <activity android:name=".TestActivity" />
         <activity android:name=".PresentationLayer.WalletActivity" />
         <activity android:name=".PresentationLayer.MyAccountActivity" />
         <activity android:name=".PresentationLayer.MyOrdersActivity" />
         <activity android:name=".PresentationLayer.OrderActivity"></activity>
     </application>
-
 </manifest>
