--- a/CustomerApp/app/src/main/AndroidManifest.xml
+++ b/CustomerApp/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <activity android:name=".PresentationLayer.WalletActivity" />
         <activity android:name=".PresentationLayer.MyAccountActivity" />
         <activity android:name=".PresentationLayer.MyOrdersActivity" />
-        <activity android:name=".PresentationLayer.OrderActivity"></activity>
+        <activity android:name=".PresentationLayer.OrderActivity" />
+        <activity android:name=".PresentationLayer.orderDetailActivity"></activity>
     </application>
+
 </manifest>
