--- a/CustomerApp/app/src/main/AndroidManifest.xml
+++ b/CustomerApp/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".PresentationLayer.MyAccountActivity" />
         <activity android:name=".PresentationLayer.MyOrdersActivity" />
         <activity android:name=".PresentationLayer.OrderActivity" />
-        <activity android:name=".PresentationLayer.orderDetailActivity"></activity>
+        <activity android:name=".PresentationLayer.OrderDetailActivity"></activity>
     </application>
 
 </manifest>
