Scan activity toegevoegd
De activity voor het scannen is gemaakt. Hij simuleert wat er
uiteindelijk gaat gebeuren.

--- a/CustomerApp/app/src/main/AndroidManifest.xml
+++ b/CustomerApp/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".PresentationLayer.RefundActivity"></activity>
         <activity android:name=".PresentationLayer.OrderHistoryActivity" />
         <activity android:name=".PresentationLayer.CustomListItemOrderHistory"></activity>
+        <activity android:name=".PresentationLayer.ScanActivity"/>
     </application>
 
 </manifest>
