Misc.xml ignore

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ CustomerApp/.idea/vcs.xml
 EmployeeApp/.idea/vcs.xml
 CustomerApp/.idea/misc.xml
 EmployeeApp/.idea/misc.xml
+
+CustomerApp/.idea/misc.xml
