Order history detail activity gemaakt

--- a/CustomerApp/app/src/main/AndroidManifest.xml
+++ b/CustomerApp/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".PresentationLayer.OrderHistoryActivity" />
         <activity android:name=".PresentationLayer.CustomListItemOrderHistory" />
         <activity android:name=".PresentationLayer.ScanActivity" />
-        <activity android:name=".PresentationLayer.OrderHistoryDetailActivity"></activity>
+        <activity android:name=".PresentationLayer.OrderHistoryDetailActivity" />
+        <activity android:name=".PresentationLayer.CustomListItemOrderHistoryDetail"></activity>
     </application>
 
 </manifest>
