--- a/EmployeeApp/app/src/main/AndroidManifest.xml
+++ b/EmployeeApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.periode4groep2.employeeapp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -17,6 +19,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.nfc.action.TECH_DISCOVERED" />
+            </intent-filter>
+            <meta-data
+                android:name="android.nfc.action.TECH_DISCOVERED"
+                android:resource="@xml/nfc_tech_filter" />
         </activity>
         <activity android:name=".PresentationLayer.LoginTest"></activity>
     </application>
