--- a/CustomerApp/app/src/main/AndroidManifest.xml
+++ b/CustomerApp/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:launchMode="singleTask"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/BestelAppv2">
         <activity android:name=".PresentationLayer.MainActivity">
@@ -39,7 +40,8 @@
             <meta-data android:name="android.nfc.cardemulation.host_apdu_service"
                 android:resource="@xml/aid_list"/>
         </service>
-        <activity android:name=".PresentationLayer.HomeScreenActivity" />
+        <activity android:name=".PresentationLayer.HomeScreenActivity"
+                  android:launchMode="singleTask" />
         <activity android:name=".PresentationLayer.BalanceActivity" />
         <activity android:name=".PresentationLayer.SettingsActivity" />
         <activity android:name=".PresentationLayer.OrderActivity" />
