Added handle order button. works if order != null

--- a/EmployeeApp/app/src/main/AndroidManifest.xml
+++ b/EmployeeApp/app/src/main/AndroidManifest.xml
@@ -30,8 +30,8 @@
                 android:name="android.nfc.action.TECH_DISCOVERED"
                 android:resource="@xml/nfc_tech_filter" />
         </activity>
-        <activity android:name=".PresentationLayer.LoginTest" />
-        <activity android:name=".PresentationLayer.HomeScreenActivity"></activity>
+        <activity android:name=".PresentationLayer.HandleOrderActivity" />
+        <activity android:name=".PresentationLayer.HomeScreenActivity" />
     </application>
 
 </manifest>
