--- a/CustomerApp/app/src/main/AndroidManifest.xml
+++ b/CustomerApp/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
         <service
             android:name=".CardEmulation.CardService"
-            android:enabled="false"
+            android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_NFC_SERVICE">
             <!-- Intent filter indicating that we support card emulation. -->
