--- a/EmployeeApp/app/src/main/AndroidManifest.xml
+++ b/EmployeeApp/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
         <activity android:name=".PresentationLayer.HandleOrderActivity" />
         <activity android:name=".PresentationLayer.HomeScreenActivity" />
+        <activity android:name=".PresentationLayer.SearchOrderActivity">
     </application>
 
 </manifest>
