Balance activity klaar

--- a/CustomerApp/app/src/main/AndroidManifest.xml
+++ b/CustomerApp/app/src/main/AndroidManifest.xml
@@ -41,8 +41,7 @@
         </service>
         <activity android:name=".PresentationLayer.HomeScreenActivity"
                   android:launchMode="singleTask" />
-        <activity android:name=".PresentationLayer.BalanceActivity"
-                  android:launchMode="singleTask"/>
+        <activity android:name=".PresentationLayer.BalanceActivity"/>
         <activity android:name=".PresentationLayer.SettingsActivity" />
         <activity android:name=".PresentationLayer.OrderActivity" />
         <activity android:name=".PresentationLayer.OrderHistoryActivity" />
