Aan SearchOrderActivity gewerkt

--- a/EmployeeApp/app/src/main/AndroidManifest.xml
+++ b/EmployeeApp/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         </activity>
         <activity android:name=".PresentationLayer.HandleOrderActivity" />
         <activity android:name=".PresentationLayer.HomeScreenActivity" />
-        <activity android:name=".PresentationLayer.SearchOrderActivity"/>
+        <activity android:name=".PresentationLayer.SearchOrderActivity" />
+        <activity android:name=".PresentationLayer.CustomListItemOrderHistorySearch"></activity>
     </application>
 
 </manifest>
