--- a/EmployeeApp/app/src/main/AndroidManifest.xml
+++ b/EmployeeApp/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".PresentationLayer.HandleOrderActivity" />
         <activity android:name=".PresentationLayer.HomeScreenActivity" />
         <activity android:name=".PresentationLayer.SearchOrderActivity" />
+        <activity android:name=".PresentationLayer.StockActivity" />
         <activity android:name=".PresentationLayer.CustomListItemOrderHistorySearch"></activity>
     </application>
 
