--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ EmployeeApp/.idea/misc.xml
 CustomerApp/.idea/misc.xml
 
 EmployeeApp/.idea/misc.xml
+
+CustomerApp/app/src/main/res/values-nl/strings.xml
